--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "opencode-swarm-plugin",
-  "version": "0.7.1",
+  "version": "0.8.0",
   "description": "Multi-agent swarm coordination for OpenCode with learning capabilities, beads integration, and Agent Mail",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
-    "opencode-swarm-setup": "./scripts/setup.ts"
+    "swarm": "./bin/swarm.ts"
   },
   "exports": {
     ".": {
