feat(streams): add projections layer with TDD
RED-GREEN-REFACTOR:
- projections.test.ts: 26 tests written first
- projections.ts: implementation to make tests pass
- Added minimatch for glob pattern matching

Projections:
- getAgents/getAgent: query registered agents
- getInbox: messages with filters (urgent, unread, limit)
- getMessage/getThreadMessages: full message retrieval
- getActiveReservations: current file locks
- checkConflicts: detect reservation conflicts

78 total tests passing across streams module

--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "@opencode-ai/plugin": "^1.0.134",
     "gray-matter": "^4.0.3",
     "ioredis": "^5.4.1",
+    "minimatch": "^10.1.1",
     "zod": "4.1.8"
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/minimatch": "^6.0.0",
     "typescript": "^5.7.0",
     "vitest": "^4.0.15"
   },
