--- a/package.json
+++ b/package.json
@@ -1,80 +1,8 @@
 {
-  "name": "opencode-swarm-plugin",
-  "version": "0.22.0",
-  "description": "Multi-agent swarm coordination for OpenCode with learning capabilities, beads integration, and Agent Mail",
-  "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "bin": {
-    "swarm": "./bin/swarm.ts"
-  },
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    },
-    "./plugin": {
-      "import": "./dist/plugin.js"
-    }
-  },
-  "scripts": {
-    "build": "bun build ./src/index.ts --outdir ./dist --target node --external @electric-sql/pglite && bun build ./src/plugin.ts --outfile ./dist/plugin.js --target node --external @electric-sql/pglite",
-    "dev": "bun --watch src/index.ts",
-    "test": "bun test src/schemas src/skills.test.ts src/streams/index.test.ts src/streams/events.test.ts src/streams/projections.test.ts src/streams/migrations.test.ts src/streams/debug.test.ts src/streams/agent-mail.test.ts src/streams/effect/deferred.test.ts src/streams/effect/mailbox.test.ts",
-    "test:watch": "bun test --watch src/schemas src/skills.test.ts",
-    "test:integration": "vitest run --config vitest.integration.config.ts",
-    "test:swarm": "bun test src/swarm-mail.integration.test.ts",
-    "test:all": "bun run test && bun run test:swarm",
-    "typecheck": "tsc --noEmit",
-    "clean": "rm -rf dist",
-    "eval:dev": "evalite watch evals/",
-    "eval:run": "evalite run evals/",
-    "eval:ci": "evalite run evals/ --threshold 80",
-    "release": "npm run build && npm version patch && git push && npm run publish:otp",
-    "release:minor": "npm run build && npm version minor && git push && npm run publish:otp",
-    "release:major": "npm run build && npm version major && git push && npm run publish:otp",
-    "publish:otp": "bash -c 'source .env && npm publish --otp=$(op item get $NPM_1P_ITEM --otp)'"
-  },
-  "dependencies": {
-    "@clack/prompts": "^0.11.0",
-    "@effect/schema": "^0.75.5",
-    "@electric-sql/pglite": "0.3.14",
-    "@opencode-ai/plugin": "^1.0.134",
-    "effect": "^3.19.12",
-    "gray-matter": "^4.0.3",
-    "ioredis": "^5.4.1",
-    "minimatch": "^10.1.1",
-    "nanoid": "^5.1.6",
-    "zod": "4.1.8"
-  },
-  "devDependencies": {
-    "@types/bun": "latest",
-    "@types/minimatch": "^6.0.0",
-    "ai": "6.0.0-beta.150",
-    "bun-types": "^1.3.4",
-    "evalite": "^1.0.0-beta.10",
-    "typescript": "^5.7.0",
-    "vitest": "^4.0.15"
-  },
-  "peerDependencies": {
-    "@opencode-ai/plugin": "^1.0.0"
-  },
-  "keywords": [
-    "opencode",
-    "plugin",
-    "swarm",
-    "agent-mail",
-    "beads",
-    "multi-agent",
-    "ai-agents",
-    "machine-learning",
-    "task-decomposition",
-    "coordination"
-  ],
-  "author": "Joel Hooks",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/joelhooks/opencode-swarm-plugin"
-  }
+  "name": "opencode-swarm-monorepo",
+  "private": true,
+  "packageManager": "bun@1.3.4",
+  "workspaces": [
+    "packages/*"
+  ]
 }
