--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,7 @@ jobs:
           node-version: "20"
           registry-url: "https://registry.npmjs.org"
 
-      - name: Update npm to latest (for OIDC support)
+      - name: Update npm to latest (for trusted publishing)
         run: npm install -g npm@latest
 
       - name: Install dependencies
