fix(swarm-mail): exclude integration tests from CI test run
Renamed integration test files from *.integration.test.ts to *.integration-test.ts
so they don't match bun test's pattern. Integration tests can be run locally
with test:integration script using vitest.

--- a/packages/swarm-mail/package.json
+++ b/packages/swarm-mail/package.json
@@ -25,7 +25,7 @@
     "build": "bun build ./src/index.ts --outdir ./dist --target node --external @electric-sql/pglite && tsc",
     "test": "bun test src/streams/ --timeout 60000",
     "test:beads": "bun test src/beads/ --timeout 60000",
-    "test:integration": "bun test src/ --include '**/*.integration.test.ts' --timeout 60000",
+    "test:integration": "vitest run src/streams/**/*.integration-test.ts --testTimeout 60000",
     "test:all": "bun test src/ --timeout 60000",
     "typecheck": "tsc --noEmit",
     "publish:pkg": "npm publish --access public --provenance"
