--- a/packages/swarm-mail/package.json
+++ b/packages/swarm-mail/package.json
@@ -35,9 +35,11 @@
     "effect": "^3.19.12",
     "minimatch": "^10.1.1",
     "nanoid": "^5.1.6",
+    "proper-lockfile": "^4.1.2",
     "zod": "4.1.8"
   },
   "devDependencies": {
+    "@types/proper-lockfile": "^4.1.4",
     "bun-types": "^1.3.4",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
