--- a/packages/swarm-mail/package.json
+++ b/packages/swarm-mail/package.json
@@ -5,8 +5,12 @@
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "bin": {
+    "swarm-mail-daemon": "./bin/daemon-cli.ts"
+  },
   "files": [
     "dist",
+    "bin",
     "README.md"
   ],
   "exports": {
@@ -22,7 +26,7 @@
   "author": "Joel Hooks",
   "license": "MIT",
   "scripts": {
-    "build": "bun build ./src/index.ts --outdir ./dist --target node --external @electric-sql/pglite && tsc",
+    "build": "bun build ./src/index.ts --outdir ./dist --target node --external @electric-sql/pglite --external postgres && tsc",
     "test": "bun test src/streams/ --timeout 60000",
     "test:beads": "bun test src/beads/ --timeout 60000",
     "test:integration": "vitest run src/streams/**/*.integration-test.ts --testTimeout 60000",
@@ -32,13 +36,16 @@
   },
   "dependencies": {
     "@electric-sql/pglite": "0.3.14",
+    "@electric-sql/pglite-socket": "^0.0.19",
     "effect": "^3.19.12",
     "minimatch": "^10.1.1",
     "nanoid": "^5.1.6",
+    "postgres": "^3.4.7",
     "proper-lockfile": "^4.1.2",
     "zod": "4.1.8"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "@types/proper-lockfile": "^4.1.4",
     "bun-types": "^1.3.4",
     "typescript": "^5.7.2",
