refactor(swarm-mail): move streams storage to $TMPDIR
Streams data is ephemeral coordination state (messages, reservations,
agent registrations). Moving to $TMPDIR:
- Eliminates git pollution from .opencode/streams/
- Auto-cleaned on reboot (which is fine - it's ephemeral)
- No more lockfile conflicts in git status

Path format: $TMPDIR/opencode-<project-name>-<hash>/streams
Example: /tmp/opencode-my-project-a1b2c3d4/streams

Durable state remains elsewhere:
- Beads: .beads/issues.jsonl (git-synced)
- Semantic memory: ~/.opencode/memory/
- CASS: ~/.cass/

--- a/.gitignore
+++ b/.gitignore
@@ -30,11 +30,11 @@ coverage/
 *.log
 npm-debug.log*
 
-# OpenCode runtime artifacts
-.opencode/streams/
+# OpenCode runtime artifacts (streams now in $TMPDIR, not project dir)
 .opencode/*.js
 .opencode/*.wasm
 .opencode/*.data
+.opencode/*.lock
 .opencode/node_modules/
 .opencode/bun.lock
 .npmrc
