feat(plugin): complete eval capture pipeline
Wire all eval-capture functions into swarm execution path:
- captureSubtaskOutcome() → swarm_complete
- finalizeEvalRecord() → swarm_record_outcome
- Add eval:run, eval:decomposition, eval:coordinator scripts
- Update README with eval workflow documentation

Key discovery: New cell ID format requires cell.parent_id for epic ID.

Tests: 19 passing, typecheck clean.

--- a/packages/opencode-swarm-plugin/package.json
+++ b/packages/opencode-swarm-plugin/package.json
@@ -30,6 +30,9 @@
     "test:all": "bun test --timeout 60000 src/",
     "test:watch": "bun test --watch src/",
     "typecheck": "tsc --noEmit",
+    "eval:run": "bunx evalite run evals/",
+    "eval:decomposition": "bunx evalite run evals/swarm-decomposition.eval.ts",
+    "eval:coordinator": "bunx evalite run evals/coordinator-session.eval.ts",
     "postinstall": "node -e \"console.log('\\n\\x1b[33m  Run \\x1b[36mswarm setup\\x1b[33m to configure OpenCode integration\\x1b[0m\\n')\""
   },
   "dependencies": {
