--- a/packages/swarm-mail/package.json
+++ b/packages/swarm-mail/package.json
@@ -32,8 +32,9 @@
   "license": "MIT",
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./dist --target node --external @libsql/client --external @electric-sql/pglite && tsc",
-    "test": "bun test src/ --timeout 60000",
-    "test:integration": "bun test src/ --timeout 120000",
+    "test": "bun test --timeout 60000 $(find src -name '*.test.ts' ! -name '*.integration.test.ts' | tr '\\n' ' ')",
+    "test:integration": "bun test src/*.integration.test.ts src/**/*.integration.test.ts --timeout 120000",
+    "test:all": "bun test src/ --timeout 120000",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
