fix(ci): improve X API tweet posting with retry and diagnostics
- Add continue-on-error so tweet failures don't fail the release
- Print tweet text upfront for manual copy/paste if API fails
- Add retry logic (3 attempts, 30s delay) for Cloudflare challenges
- Add Content-Type and User-Agent headers
- Log response headers for debugging rate limits and CF blocks
- Better error categorization (401/403/429/Cloudflare)

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -149,11 +149,21 @@ jobs:
 
       - name: Post to X (API v2)
         if: steps.changesets.outputs.published == 'true' && steps.tweet.outputs.text != ''
+        continue-on-error: true
         run: |
+          echo "═══════════════════════════════════════════════════════════════"
+          echo "📋 TWEET TEXT (copy if auto-post fails):"
+          echo "═══════════════════════════════════════════════════════════════"
+          echo "$TWEET_TEXT"
+          echo "═══════════════════════════════════════════════════════════════"
+          echo ""
+          
           # X API v2 requires OAuth 1.0a signature - use python for reliable signing
           pip install requests requests-oauthlib -q
+          
           python3 << 'PYEOF'
           import os
+          import time
           from requests_oauthlib import OAuth1Session
           
           tweet_text = os.environ['TWEET_TEXT']
@@ -165,16 +175,61 @@ jobs:
               resource_owner_secret=os.environ['X_ACCESS_TOKEN_SECRET'],
           )
           
-          response = client.post(
-              "https://api.twitter.com/2/tweets",
-              json={"text": tweet_text},
-          )
+          # Headers that X API expects (and Cloudflare checks)
+          headers = {
+              "Content-Type": "application/json",
+              "User-Agent": "SwarmToolsBot/1.0 (https://github.com/joelhooks/swarm-tools)",
+          }
           
-          if response.status_code == 201:
-              print(f"Tweet posted: {response.json()}")
-          else:
-              print(f"Failed: {response.status_code} - {response.text}")
-              exit(1)
+          # Retry logic - Cloudflare sometimes blocks GitHub Actions IPs
+          max_attempts = 3
+          for attempt in range(1, max_attempts + 1):
+              print(f"\n🐝 Attempt {attempt}/{max_attempts}...")
+              
+              response = client.post(
+                  "https://api.twitter.com/2/tweets",
+                  json={"text": tweet_text},
+                  headers=headers,
+              )
+              
+              # Log response headers for debugging
+              print(f"   Status: {response.status_code}")
+              print(f"   Headers: {dict(response.headers)}")
+              
+              if response.status_code == 201:
+                  print(f"✅ Tweet posted: {response.json()}")
+                  exit(0)
+              elif response.status_code == 403 and "Just a moment" in response.text:
+                  print(f"⚠️  Cloudflare challenge detected (attempt {attempt})")
+                  if attempt < max_attempts:
+                      print(f"   Waiting 30s before retry...")
+                      time.sleep(30)
+              elif response.status_code == 429:
+                  reset_time = response.headers.get('x-rate-limit-reset', 'unknown')
+                  remaining = response.headers.get('x-rate-limit-remaining', 'unknown')
+                  print(f"⚠️  Rate limited!")
+                  print(f"   Remaining: {remaining}, Reset: {reset_time}")
+                  print(f"   Response: {response.text[:500]}")
+                  break
+              elif response.status_code == 401:
+                  print(f"❌ Auth failed (401) - check X API credentials")
+                  print(f"   Response: {response.text[:500]}")
+                  break
+              elif response.status_code == 403:
+                  # Check if it's a real 403 or Cloudflare
+                  if "cf-ray" in response.headers or "cloudflare" in response.headers.get("server", "").lower():
+                      print(f"⚠️  Cloudflare blocking (non-challenge 403)")
+                  else:
+                      print(f"❌ Forbidden (403) - may be app permissions or suspended")
+                  print(f"   Response: {response.text[:500]}")
+                  break
+              else:
+                  print(f"❌ Unexpected error: {response.status_code}")
+                  print(f"   Response: {response.text[:500]}")
+                  break
+          
+          print("\n❌ All attempts failed - tweet text printed above for manual posting")
+          exit(1)
           PYEOF
         env:
           TWEET_TEXT: ${{ steps.tweet.outputs.text }}
