fix(publish): robust workspace dep resolution with bun 1.3.8
- Bump packageManager from bun@1.3.4 to bun@1.3.8
- Replace fragile inline ci:publish with scripts/ci-publish.sh
- Script packs, verifies no workspace:* leaks, resolves if found, then publishes
- Previous 0.63.1 still had workspace:* because bun 1.3.4 doesn't resolve during pack

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "opencode-swarm-monorepo",
   "private": true,
-  "packageManager": "bun@1.3.4",
+  "packageManager": "bun@1.3.8",
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
   "scripts": {
     "ci:version": "changeset version && bun update",
-    "ci:publish": "for dir in packages/*; do (cd \"$dir\" && TARBALL=$(bun pm pack --destination /tmp/pkg-publish 2>&1 | grep '\\.tgz$') && npm publish \"$TARBALL\" --access public && rm -f \"$TARBALL\" || true); done && rm -rf /tmp/pkg-publish 2>/dev/null; changeset tag",
+    "ci:publish": "bash scripts/ci-publish.sh",
     "test:integration": "bun --filter=opencode-swarm-plugin test:integration",
     "eval:ci": "cd packages/opencode-swarm-plugin && bun run swarm eval run --ci"
   },
