chore: link opencode + claude-code plugin versions in changesets
Both packages are the "swarm" plugin — having them diverge (0.63.x vs 0.61.x)
is confusing. Linked versions ensure they bump together going forward.

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -6,7 +6,7 @@
   ],
   "commit": false,
   "fixed": [],
-  "linked": [],
+  "linked": [["opencode-swarm-plugin", "claude-code-swarm-plugin"]],
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
